# python_app

./: .gitignore  Dockerfile  README.md  data.db  foo.db  pyproject.toml
cicd/k8s/: app_deploy.yaml  app_svc.yaml  postgres_deploy.yaml  postgres_secret.yaml  rproxy-deploy.yaml  rproxy-svc.yaml  sc-azure-file.yaml
src/: config.py
src/example_package/: hello.py
src/files/: compare.py
src/rproxy/: nginx.conf
src/shop/: api.py  config.py  model.py  models.py  orm.py  repository.py  services.py
src/shop/adapter/: orm.py  repository.py
src/shop/domain/: model.py
src/shop/entrypoints/: app.py  flask_app.py
src/shop/service_layer/: services.py  unit_of_work.py
tests/: conftest.py  test_files.py  test_hello.py  test_orm.py  test_repository.py  test_shop.py
tests/files/: test_files.py
tests/shop/: conftest.py  test_allocate.py  test_api.py  test_batches.py  test_orm.py  test_repository.py  test_service.py
tests/shop/e2e/: test_api.py  test_orm.py  test_repository.py
tests/shop/integration/: test_api.py  test_orm.py  test_repository.py  test_uow.py
tests/shop/unit/: test_allocate.py  test_batches.py  test_product.py  test_service.py
