[project]
name = "shop"
version = "0.1.0"
description = "Python Archtecture"
authors = [
    {name = "Philipp.DAngelo.external", email = "philipp_angelo@gmx.de"},
]
dependencies = [
    "sqlalchemy==1.4",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.12.1",
]
[tool.pdm.scripts]
test = "pytest tests/shop/"