[project]
name = "shop"
version = "0.1.0"
description = ""
authors = [
    {name = "Philipp.DAngelo.external", email = "philipp_angelo@gmx.de"},
]
dependencies = [
    "sqlalchemy==1.4",
    "flask>=3.0.2",
    "SQLAlchemy-Utils>=0.41.1",
    "random-word>=1.0.11",
    "environ-config>=23.2.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.12.1",
]

[tool.pdm.scripts]
start.env_file.override = ".env"
test = "pytest tests/shop/"
app = "flask --app shop.entrypoints.flask_app --debug run"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
