[project]
name = "shop"
version = "0.1.0"
description = "Python Archtecture"
authors = [
    {name = "Philipp.DAngelo.external", email = "philipp_angelo@gmx.de"},
]
dependencies = [
    "sqlalchemy==1.4",
    "flask>=3.0.2",
    "SQLAlchemy-Utils>=0.41.1",
    "random-word>=1.0.11",
    "environ-config>=23.2.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "psycopg2-binary>=2.9.9",
    "pg8000>=1.30.5",
    "psycopg2>=2.9.9",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.12.1",
]
[tool.pdm.scripts]
test = "pytest tests/shop/"
app_debug = "uvicorn shop.entrypoints.app:app --reload --port 1234"
app = "uvicorn shop.entrypoints.app:app --host 0.0.0.0 --port 1234"
start.env_file = ".env"
